--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "shiki": "^3.7.0",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
